[tool.poetry]
name = "tg_bot"
version = "0.1.0"
description = ""
authors = ["OlegKutsko <104584943+OlegKutsko@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
pip = "^22.2"
pyTelegramBotAPI = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
